tests/parsing/smtlib/v2.6/errors/105_push_unclosed_1.expected
File "tests/parsing/smtlib/v2.6/errors/105_push_unclosed_1.smt2", line 1, character 8-9:
1 | (push 0 _)
            ^
Error while parsing a push command, read the reserved word '_',
      but expected a closing parenthesis.
